SERVER-57081 Enable collection creation through applyOps